# 430-project

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
docs/: README.md
docs/submit/: PatrickMiller_GuiDesign.docx  README.txt  schema_all.sql
sql/: auth.sql  customer_ops.sql  get_customers.sql  loan_test_data.sql  schema.sql  schema_all.sql  transaction_ops.sql  uid.sql
src/: config.rs  db.rs  lib.rs  main.rs
src-tauri/: Cargo.toml  db.toml  tauri.conf.json
src-tauri/src/: admin.rs  auth.rs  customer.rs  lib.rs  loan.rs  main.rs
src/cli/: answer.rs  customer.rs  loan.rs  main.rs  menu.rs  mod.rs  transaction.rs
src/schema/: auth.rs  auto_loan.rs  customer.rs  loan.rs  mod.rs  mortgage_loan.rs  personal_loan.rs  transaction.rs
svelte/: package.json
svelte/src/: App.svelte  main.ts
svelte/src/components/: AdminView.svelte  CustomerTable.svelte  CustomerView.svelte  LoanTable.svelte  Login.svelte  Table.svelte
svelte/src/components/tables/: CustomerTable.svelte  LoanTable.svelte
