[package]
name = "cs-430-sql-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["src-tauri"]
exclude = ["sql", "svelte"]

[dependencies]
chrono = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
oracle = { version = "0.5", features = ["chrono"] }
requestty = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
