[package]
name = "loans"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["src-tauri"]
exclude = ["sql", "svelte"]

[[bin]]
name = "loan-cli"
path = "src/bin/cli.rs"

[dependencies]
chrono = "0.4"
figment = { version = "0.10", features = ["toml", "env"] }
lazy_static = "1.4"
oracle = { version = "0.5", features = ["chrono"] }
r2d2 = "0.8"
r2d2-oracle = "0.5"
requestty = { version = "0.3.0", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
tabled = "0.5"
